# telugu_sahithi_sahakari

./: CHANGELOG  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  pyproject.toml  requirements.txt
backend/: main.py
backend/core/: settings.py
backend/services/: corpus_api.py  vector_store.py
frontend/: app.py
frontend/pages/: 0_contribute.py  1_Login.py  2_telugu_chatbot.py
